package dev.pietro_lopes;

public class IPhone extends SmartPhone {
    IPhone() {
        super("iPhone Primeira Geração");
    }
}
