@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
mainframe Projeto de POO
'Repodutor Musicial: tocar, pausar, selecionarMusica
'Aparelho Telefônico: ligar, atender, iniciarCorrerioVoz
'Navegador na Internet: exibirPagina, adicionarNovaAba, atualizarPagina

interface ReprodutorMusical {
+ tocar() : void
+ pausar() : void
+ selecionarMusica() : void
}

interface AparelhoTelefonico {
+ ligar() : void
+ atender() : void
+ iniciarCorreioVoz() : void
}

interface NavegadorDeInternet {
+ exibirPagina() : void
+ adicionarNovaAba() : void
+ atualizarPagina() : void
}

abstract class SmartPhone {
- modelo : String
+ getModelo() : String
}

NavegadorDeInternet <|.. SmartPhone
AparelhoTelefonico <|.. SmartPhone
ReprodutorMusical <|.. SmartPhone

class IPhone

SmartPhone <|-- IPhone

@enduml